# healthadvocate

./: README.md  docker-compose.yml  nginx.conf
backend/: Dockerfile  pyproject.toml
backend/data/: healthadvocate.db
backend/src/healthadvocate/: __init__.py  config.py  models.py
backend/src/healthadvocate/advisor/: ddg_search.py  food_advisor.py
backend/src/healthadvocate/api/: deps.py  main.py  routes_query.py  routes_trends.py  routes_upload.py
backend/src/healthadvocate/ingestion/: extraction.py  indexer.py  parser.py  pdf_store.py
backend/src/healthadvocate/labs/: analyzer.py
backend/src/healthadvocate/retrieval/: query_engine.py  synthesis.py
backend/src/healthadvocate/storage/: lab_store.py
backend/tests/: conftest.py  test_analyzer.py  test_api.py  test_extraction.py  test_food_advisor.py  test_health.py  test_indexer.py  test_lab_store.py  test_parser.py  test_pdf_store.py  test_query_engine.py
docs/: API.md  ARCHITECTURE.md  DATA_FLOW.md  PROJECT_DOCUMENTATION.md  PROJECT_PLAN.md  SAFETY_DISCLAIMER.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/components/ui/: Tabs.tsx
frontend/src/styles/: tokens.css
frontend/src/tabs/: AskTab.tsx  UploadTab.tsx
src/: App.tsx  types.ts
src/api/: client.ts
src/components/: FindingsCard.tsx  FoodAdviceCard.tsx  TrendChart.tsx
src/styles/: global.css
src/tabs/: TrendsTab.tsx
