[project]
name = "healthadvocate"
version = "0.1.0"
description = "RAG application for personal bloodwork analysis"
readme = "../README.md"
requires-python = ">=3.12"
dependencies = [
    # API
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.32,<0.33",
    "python-multipart>=0.0.12",
    "pydantic>=2.9,<3",
    "pydantic-settings>=2.6,<3",
    # RAG / indexing
    "llama-index-core>=0.12,<0.13",
    "llama-index-embeddings-openai>=0.3,<0.4",
    "llama-index-llms-openai>=0.3,<0.4",
    "llama-index-vector-stores-pinecone>=0.4,<0.5",
    "pinecone>=5.0,<6",
    "openai>=1.54,<2",
    # PDF parsing
    "pypdf>=5.1,<6",
    # Agentic web search
    "langchain>=0.3,<0.4",
    "langchain-community>=0.3,<0.4",
    "langchain-openai>=0.2,<0.3",
    "ddgs>=9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
    "pytest-cov>=6.0,<7",
    "pytest-asyncio>=0.24,<0.25",
    "httpx>=0.27,<0.28",
    "ruff>=0.7,<0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/healthadvocate"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
# B008: FastAPI's Depends() in argument defaults is the idiomatic pattern.
ignore = ["B008"]
